--- a/Models/Diffusion/2024.06.04_SimpleSpeech.md
+++ b/Models/Diffusion/2024.06.04_SimpleSpeech.md
@@ -12,7 +12,7 @@
   - [Xixin Wu](../../Authors/Xixin_Wu.md)
   - [Helen Meng](../../Authors/Helen_Meng_(蒙美玲).md)
 - 机构:
-  - [香港中文大学](../../Institutions/CUHK.md)
+  - [香港中文大学](../../Institutions/CUHK_香港中文大学.md)
 - 时间:
   - 预印时间: 2024.06.04 ArXiv v1
   - 更新笔记: 2024.06.06
@@ -54,7 +54,7 @@
 > However, the recently proposed approaches based on large-scale speech data significantly simplify the TTS system ([AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md), [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), [UniAudio](../../Models/Speech_LLM/2023.10.01_UniAudio.md), [Make-A_Voice](../../Models/_tmp/2023.05.30_Make-A-Voice.md)).
 > For instance, language model (LM) based TTS, e.g. [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) uses a pre-trained audio codec model e.g. [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) to map the speech signal into a sequence of discrete tokens, then an auto-regressive language model is trained to translate the phoneme into speech tokens.
 > It can generate more expressive speech, but also is troubled by the slow and unstable inference.
-> To address these issues, Non-autoregressive (NAR) models, e.g. [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md), and [VoiceBox](../../Models/_tmp/2023.06.23_VoiceBox.md), are proposed.
+> To address these issues, Non-autoregressive (NAR) models, e.g. [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md), and [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md), are proposed.
 > They have higher inference speed and better stability, but with the cost of (1) relying on phoneme-acoustic alignment information, and (2) a more complicated training process.
 > In this work, we propose a simple and efficient TTS system, ***SimpleSpeech***, which does not rely on any alignment information and generates high-quality speech in a NAR way.2To build such a TTS system, where we meet with the following research problems: 
 > 
