--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -35,7 +35,6 @@
   - [语音合成](../../Tags/SpeechSynthesis.md)
   - [自回归](../../Tags/Autoregressive.md)
   - [连续Token](../../Tags/Token_Continuous.md)
-  - [单阶段](../../Tags/Stage_Single.md)
 - 页数: 17
 - 引用: ?
 - 被引: ?
@@ -188,32 +187,59 @@
 
 ## 3.Methodology: 方法
 
-### 3.1.Problem Formulation: Mel-Spectrogram Language modeling
+### 3.1.Problem Formulation: Mel-Spectrogram Language Modeling <br> 问题形式化: 梅尔频谱语言建模
+
+<details>
+<summary>原文</summary>
 
 > This study regards zero-shot TTS as an autoregressive mel-spectrogram language modeling task.
-> Instead of predicting highly-compressed neural codec codes like VALL-E and its variants, ~***MELLE*** directly predicts continuous mel-spectrograms which are then converted to waveforms with an off-the-shelf vocoder.
+> Instead of predicting highly-compressed neural codec codes like VALL-E and its variants, ***MELLE*** directly predicts continuous mel-spectrograms which are then converted to waveforms with an off-the-shelf vocoder.
 > Taking well-established mel-spectrogram as the training target, it strives to achieve higher fidelity and naturalness.
 >
-> Given an audio sample with byte-pair-encoded (BPE) text content $\bm{x} = [x_0, x_1, \ldots, x_{L-1}]$, ***MELLE*** is optimized to predict the mel-spectrogram $\bm{y} = [\bm{y}_0, \bm{y}_1, \ldots, \bm{y}_{T-1}]$ extracted from the corresponding audio.
-> Specifically, at each autoregressive step, ***MELLE*** is expected to predict the next mel-spectrogram frame $\bm{y}_{t}$ conditioned on the text prompt $\bm{x}$ and the previous generated mel-spectrograms $\bm{y}_{<t}$, which is equivalent to maximizing the following distribution:
+> Given an audio sample with byte-pair-encoded (BPE) text content $\pmb{x} = [x_0, x_1, \ldots, x_{L-1}]$, ***MELLE*** is optimized to predict the mel-spectrogram $\pmb{y} = [\pmb{y}_0, \pmb{y}_1, \ldots, \pmb{y}_{T-1}]$ extracted from the corresponding audio.
+> Specifically, at each autoregressive step, ***MELLE*** is expected to predict the next mel-spectrogram frame $\pmb{y}_{t}$ conditioned on the text prompt $\pmb{x}$ and the previous generated mel-spectrograms $\pmb{y}_{<t}$, which is equivalent to maximizing the following distribution:
 >
 > $$
-> p(\bm{y} \mid \bm{x}; \theta) = \prod_{t=0}^{T-1} p(\bm{y}_t \mid \bm{y}_{<t}, \bm{x}; \theta)\tag{01}
+> p(\pmb{y} \mid \pmb{x}; \theta) = \prod_{t=0}^{T-1} p(\pmb{y}_t \mid \pmb{y}_{<t}, \pmb{x}; \theta)\tag{01}
 > $$
 >
-> where $\bm{y}_{<t}$ denotes $[\bm{y}_0, \bm{y}_1,..., \bm{y}_{t-1}]$ and $\theta$ represents the parameters of ***MELLE***. 
+> where $\pmb{y}_{<t}$ denotes $[\pmb{y}_0, \pmb{y}_1,..., \pmb{y}_{t-1}]$ and $\theta$ represents the parameters of ***MELLE***. 
 >
 > Inspired by previous neural TTS models ([TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)), we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech.
-> Formally, the original mel-spectrogram sequences $\bm{y}$ will be partitioned into $\bm{y}^r = [\bm{y}_{0:r}, \bm{y}_{r:2r}, ..., \bm{y}_{(T-r):T}]$ with reduction factor $r$, and the likelihood function can be expressed as follows:
+> Formally, the original mel-spectrogram sequences $\pmb{y}$ will be partitioned into $\pmb{y}^r = [\pmb{y}_{0:r}, \pmb{y}_{r:2r}, ..., \pmb{y}_{(T-r):T}]$ with reduction factor $r$, and the likelihood function can be expressed as follows:
 >
 > $$
-> p(\bm{y} \mid \bm{x}; \theta) = \prod_{t=0}^{T/r-1} p(\bm{y}_{t\cdot r:(t+1)\cdot r} \mid \bm{y}_{<t\cdot r}, \bm{x}; \theta)\tag{02}
+> p(\pmb{y} \mid \pmb{x}; \theta) = \prod_{t=0}^{T/r-1} p(\pmb{y}_{t\cdot r:(t+1)\cdot r} \mid \pmb{y}_{<t\cdot r}, \pmb{x}; \theta)\tag{02}
 > $$
 >
-> During inference, ***MELLE*** executes zero-shot TTS tasks via prompting like VALL-E.
-> Given the text content $\bm{x}$ for synthesis, text transcription $\tilde{\bm{x}}$ and mel-spectrogram $\tilde{\bm{y}}$ of speech prompt, the model is designed to generate the target mel-spectrogram $\bm{y}$ of the corresponding content while preserving the characteristics of the original speaker in prompt, with maximum likelihood probability as $\argmax_{\bm{y}} p(\bm{y}_{t\cdot r:(t+1)\cdot r} \mid [\tilde{\bm{x}}; \bm{x}; \tilde{\bm{y}}; \bm{y}_{<t\cdot r}]; \theta)$ at each step, where $[;]$ means concatenation operation and it backs to standard mode if $r=1$.
+> During inference, ***MELLE*** execute
 
-### 3.2.Architecture
+</details>
+<br>
+
+本项研究将零样本文本转语音视为自回归梅尔频谱语言建模任务.
+和 VALL-E 及其变体预测高度压缩的神经编解码器编码不同, ***MELLE*** 直接预测连续梅尔频谱, 然后使用现成的声码器将之转换为波形.
+将成熟的梅尔频谱作为训练目标, 试图实现更高的保真度和自然度.
+
+给定一个带有字节对编码文本内容的音频样本 $\pmb{x} = [x_0, x_1, \ldots, x_{L-1}]$, ***MELLE*** 被优化以预测从相应音频中提取的梅尔频谱图 $\pmb{y} = [\pmb{y}_0, \pmb{y}_1, \ldots, \pmb{y}_{T-1}]$.
+具体地, 在每个自回归步, ***MELLE*** 根据文本提示 $\pmb{x}$ 和之前生成的梅尔频谱 $\pmb{y}_{<t}$ 预测下一个梅尔频谱帧 $\pmb{y}_{t}$, 等价于最大化下列分布:
+
+$$
+  p(\pmb{y} \mid \pmb{x}; \theta) = \prod_{t=0}^{T-1} p(\pmb{y}_t \mid \pmb{y}_{<t}, \pmb{x}; \theta)\tag{01}
+$$
+
+受到之前的神经文本转语音模型 Transformer-TTS 的启发, 我们同样可以设置一个缩减因子 $r$ 用于控制每个解码步骤预测的梅尔频谱帧数, 提供了计算效率和高质量语音生成的平衡.
+
+具体形式化: 原始的梅尔频谱序列 $\pmb{y}$ 将被分割为 $\pmb{y}^r = [\pmb{y}_{0:r}, \pmb{y}_{r:2r}, ..., \pmb{y}_{(T-r):T}]$ 形式, 其中 $r$ 为缩减因子, 似然函数表示为
+
+$$
+  p(\pmb{y} \mid \pmb{x}; \theta) = \prod_{t=0}^{T/r-1} p(\pmb{y}_{t\cdot r:(t+1)\cdot r} \mid \pmb{y}_{<t\cdot r}, \pmb{x}; \theta)\tag{02}
+$$
+
+在推理时, ***MELLE*** 通过类似 VALL-E 的提示执行零样本文本转语音任务.
+给定文本内容 $\pmb{x}$, 语音提示 $\tilde{\pmb{x}}$ 和相应的梅尔频谱 $\tilde{\pmb{y}}$, 模型被设计用于生成相应内容的目标梅尔频谱 $\pmb{y}$, 同时保持原始提示语音的特征, 在每步最大化下列分布的似然概率 $\argmax_{\pmb{y}} p(\pmb{y}_{t\cdot r:(t+1)\cdot r} \mid [\tilde{\pmb{x}}; \pmb{x}; \tilde{\pmb{y}}; \pmb{y}_{<t\cdot r}]; \theta)$, 其中 $[;]$ 表示拼接操作, 若 $r=1$ 则回到标准模式.
+
+### 3.2.Architecture: 架构
 
 > As illustrated in Figure \ref{fig:overview}, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)).
 > Finally, a vocoder is used to recover the speech from generated mel-spectrogram. 
@@ -225,10 +251,10 @@
 #### 3.2.1.Autoregressive Language Model
 
 > We employ a unidirectional Transformer decoder as the language model (LM) to autoregressively generates acoustic continuous features based on the textual input and acoustic prompts.
-> Specifically, input text tokens $\bm{x}$, with an appended <EOS> token, are first converted into embeddings by the text embedding layer based on their indices. 
-> Simultaneously, we employ a multi-layer perceptron, named pre-net, to project the mel-spectrogram $\bm{y}$ to the language model dimension.
+> Specifically, input text tokens $\pmb{x}$, with an appended <EOS> token, are first converted into embeddings by the text embedding layer based on their indices. 
+> Simultaneously, we employ a multi-layer perceptron, named pre-net, to project the mel-spectrogram $\pmb{y}$ to the language model dimension.
 > The LM, consisting of blocks of multi-head attention and feed-forward layers, takes the concatenation of text and acoustic embeddings as input to model the dependency between semantic and acoustic information.
-> The output of the LM $\bm{e}_t$ at time step $t$ is subsequently processed by the following modules of ***MELLE*** to synthesize the next-frame output, which is detailed in the following section.
+> The output of the LM $\pmb{e}_t$ at time step $t$ is subsequently processed by the following modules of ***MELLE*** to synthesize the next-frame output, which is detailed in the following section.
 
 #### 3.2.2.Latent Sampling Module
 
@@ -237,33 +263,33 @@
 > Neural codec language models ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [VALL-E X](../../Models/Speech_LLM/2023.03.07_VALL-E_X.md)) adopt the top-p random sampling to avoid the collapse outputs leading by greedy search; Diffusion-based ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution. 
 >
 > In this study, inspired by variational autoencoders (VAEs) \citep{kingma2014vae, blei2017vi_review}, we integrate a novel latent sampling module within ***MELLE***, aimed at enhancing both expressive diversity and robustness, as shown in Figure \ref{fig:modules} (left).
-> Based on $\bm{e}_t$, the output of the LM, this module predicts a distribution, from which a latent embedding $\bm{z}_t$ is sampled. %This latent embedding is then mapped to the mel-spectrogram space.
+> Based on $\pmb{e}_t$, the output of the LM, this module predicts a distribution, from which a latent embedding $\pmb{z}_t$ is sampled. %This latent embedding is then mapped to the mel-spectrogram space.
 >
-> Specifically, we assume that $\bm{z}_t$ follows a multivariate Gaussian distribution where each dimension is independent.
-> As depicted in Figure \ref{fig:modules}, a linear layer ($\mathbf{W} [\cdot] + \mathbf{b}$) predicts a mean vector $\boldsymbol{\mu}_t$ and a log-magnitude variance vector $\log\bm{\sigma}_t^2$ of the multivariate Gaussian distribution based on $\bm{e}_t$.
-> Leveraging the reparameterization technique, a $\bm{z}_t$ is sampled as
+> Specifically, we assume that $\pmb{z}_t$ follows a multivariate Gaussian distribution where each dimension is independent.
+> As depicted in Figure \ref{fig:modules}, a linear layer ($\mathbf{W} [\cdot] + \mathbf{b}$) predicts a mean vector $\boldsymbol{\mu}_t$ and a log-magnitude variance vector $\log\pmb{\sigma}_t^2$ of the multivariate Gaussian distribution based on $\pmb{e}_t$.
+> Leveraging the reparameterization technique, a $\pmb{z}_t$ is sampled as
 $$
 \begin{aligned}
-&\bm{z}_t = \bm{\mu}_t + \bm{\sigma}_t \odot \bm{\epsilon} \\ \text{where}\quad\bm{\epsilon} &\sim \mathcal{N}(0, \bm{I}), \quad  [\bm{\mu}_t, \log \bm{\sigma}_t^2] = \mathbf{W} \bm{e}_t + \mathbf{b}
+&\pmb{z}_t = \pmb{\mu}_t + \pmb{\sigma}_t \odot \pmb{\epsilon} \\ \text{where}\quad\pmb{\epsilon} &\sim \mathcal{N}(0, \pmb{I}), \quad  [\pmb{\mu}_t, \log \pmb{\sigma}_t^2] = \mathbf{W} \pmb{e}_t + \mathbf{b}
 \end{aligned}
 $$
 
 > Therefore, the probability density function can be defined as
 > $$
 > \begin{aligned}
-> &p_\theta(\bm{z}_t \mid \bm{e}_t) = \mathcal{N}(\bm{z}_t \mid \bm{\mu}_t, \mathrm{diag}(\bm{\sigma}_t^2)) 
+> &p_\theta(\pmb{z}_t \mid \pmb{e}_t) = \mathcal{N}(\pmb{z}_t \mid \pmb{\mu}_t, \mathrm{diag}(\pmb{\sigma}_t^2)) 
 > \end{aligned}
 > $$
 >
 > Note that the latent sampling module is differentiable with the reparameterization technique.
-> Next, the latent variable $\bm{z}_t$ is passed through a multi-layer perceptron (MLP) with residual connections, mapping it to the mel-spectrogram space as $\bm{y}'_{t}$, where $t=0, 1, ..., T-1$.
+> Next, the latent variable $\pmb{z}_t$ is passed through a multi-layer perceptron (MLP) with residual connections, mapping it to the mel-spectrogram space as $\pmb{y}'_{t}$, where $t=0, 1, ..., T-1$.
 
 #### 3.2.3.Stop Prediction Layer and Post-Net
 
 > Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an <EOS> token to indicate the end of generation.
-> Instead, we use a linear layer as a binary classifier, taking $\bm{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
-> Following previous neural TTS models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\bm{y}'=\{\bm{y}'_{0}, \bm{y}'_{1}, ..., \bm{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\bm{y}''=\{\bm{y}''_{0}, \bm{y}''_{1}, ..., \bm{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right). 
-> During training, the model is trained using teacher-forcing; while during inference, post-net processes $\bm{y}'$ after the AR generation concludes.
+> Instead, we use a linear layer as a binary classifier, taking $\pmb{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
+> Following previous neural TTS models ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right). 
+> During training, the model is trained using teacher-forcing; while during inference, post-net processes $\pmb{y}'$ after the AR generation concludes.
 
 ### 3.3.Training Objective
 
@@ -280,31 +306,31 @@ $$
 #### Regression Loss
 
 > The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md)).
-> The regression loss, \(\mathcal{L}_{\text{reg}}\), is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\bm{y}'$ and final prediction $\bm{y}''$ of the mel-spectrogram.
+> The regression loss, \(\mathcal{L}_{\text{reg}}\), is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\pmb{y}'$ and final prediction $\pmb{y}''$ of the mel-spectrogram.
 > It is defined as follows:
 
 $$
 \begin{aligned}
-\mathcal{L}_{\text{reg}}(\bm{y}, \bm{y}', \bm{y}'')
-   &= \mathcal{L}_{\text{L1}}(\bm{y}, \bm{y}') + \mathcal{L}_{\text{L2}}(\bm{y}, \bm{y}') + \mathcal{L}_{\text{L1}}(\bm{y}, \bm{y}'') + \mathcal{L}_{\text{L2}}(\bm{y}, \bm{y}'') \notag \\
-   &= \|\bm{y} - \bm{y}'\|_1 + \|\bm{y} - \bm{y}'\|_2^2 + \|\bm{y} - \bm{y}''\|_1 + \|\bm{y} - \bm{y}''\|_2^2
+\mathcal{L}_{\text{reg}}(\pmb{y}, \pmb{y}', \pmb{y}'')
+   &= \mathcal{L}_{\text{L1}}(\pmb{y}, \pmb{y}') + \mathcal{L}_{\text{L2}}(\pmb{y}, \pmb{y}') + \mathcal{L}_{\text{L1}}(\pmb{y}, \pmb{y}'') + \mathcal{L}_{\text{L2}}(\pmb{y}, \pmb{y}'') \notag \\
+   &= \|\pmb{y} - \pmb{y}'\|_1 + \|\pmb{y} - \pmb{y}'\|_2^2 + \|\pmb{y} - \pmb{y}''\|_1 + \|\pmb{y} - \pmb{y}''\|_2^2
 \end{aligned}
 $$
 
-> where $\bm{y}$ represents the ground-truth mel-spectrogram target.
+> where $\pmb{y}$ represents the ground-truth mel-spectrogram target.
 
 #### KL Divergence Loss
 
 > We introduce a Kullback-Leibler (KL) divergence loss based on the concept of variational inference \citep{kingma2014vae, blei2017vi_review}, to enhance the diversity and stability of ***MELLE***.
-> The KL divergence measures the difference between the predicted latent distribution \( p_\theta(\bm{z}_t \mid \bm{e}_t) \) and a simpler distribution \( p(\bm{z}_t) \).
-> Unlike \cite{kingma2014vae}, which selects \( p(\bm{z}_t) \) as a standard normal distribution, we let \(\bm{z}_t\) possess the same dimensionality as the mel-spectrogram and define \( p(\bm{z}_t) \) as \(\mathcal{N}(\bm{y}_t, \bm{I})\). 
+> The KL divergence measures the difference between the predicted latent distribution \( p_\theta(\pmb{z}_t \mid \pmb{e}_t) \) and a simpler distribution \( p(\pmb{z}_t) \).
+> Unlike \cite{kingma2014vae}, which selects \( p(\pmb{z}_t) \) as a standard normal distribution, we let \(\pmb{z}_t\) possess the same dimensionality as the mel-spectrogram and define \( p(\pmb{z}_t) \) as \(\mathcal{N}(\pmb{y}_t, \pmb{I})\). 
 > This can be seen as a shortcut on the optimization path thus accelerates the model's learning.
 > Combining equation (\ref{eq:gaussian}), the KL divergence loss among $T$ time steps can be analytically computed as
 
 $$
 \begin{aligned}
-\mathcal{L}_\text{KL}(\bm{y}, \bm{z}) &= \sum_{t=0}^{T-1} D_{\text{KL}}(p_\theta(\bm{z}_t \mid \bm{e}_t) \parallel p(\bm{z}_t)) \notag\\
-&=\frac{1}{2} \sum_{t=0}^{T-1} \sum_{i=1}^d \left( \bm{\sigma}_t^2[i] + (\bm{\mu}_t[i]-\bm{y}_t[i])^2 - 1 - \log\bm{\sigma}_t^2[i] \right) 
+\mathcal{L}_\text{KL}(\pmb{y}, \pmb{z}) &= \sum_{t=0}^{T-1} D_{\text{KL}}(p_\theta(\pmb{z}_t \mid \pmb{e}_t) \parallel p(\pmb{z}_t)) \notag\\
+&=\frac{1}{2} \sum_{t=0}^{T-1} \sum_{i=1}^d \left( \pmb{\sigma}_t^2[i] + (\pmb{\mu}_t[i]-\pmb{y}_t[i])^2 - 1 - \log\pmb{\sigma}_t^2[i] \right) 
 \end{aligned}
 $$
 
@@ -319,11 +345,11 @@ $$
 
 $$
 \begin{aligned}
-\mathcal{L}_{\text{flux}}(\bm{y}, \bm{\mu}) = - \sum_{t=1}^{T-1} \|\bm{\mu}_t - \bm{y}_{t-1}\|_1
+\mathcal{L}_{\text{flux}}(\pmb{y}, \pmb{\mu}) = - \sum_{t=1}^{T-1} \|\pmb{\mu}_t - \pmb{y}_{t-1}\|_1
 \end{aligned}
 $$
 
-> where the L1 norm is employed to measure the difference between the predicted Gaussian mean vector $\bm{\mu}_t$ and the previous ground truth frame $\bm{y}_{t-1}$.
+> where the L1 norm is employed to measure the difference between the predicted Gaussian mean vector $\pmb{\mu}_t$ and the previous ground truth frame $\pmb{y}_{t-1}$.
 > By summing the negative value of the differences, the loss function rewards variations between frames, and the model is encouraged to reduces the generation of overly static frames that leading to repetition or endless silence in synthesized audio. 
 >
 > Additionally, by penalizing flat predictions, the model is incentivized to produce more diverse and dynamic frame sequences, thereby preventing monotonic and unnatural speech.
@@ -336,8 +362,8 @@ $$
 ### 3.4.Inference: In-Context Learning for Mel-Spectrogram
 
 > During inference, we perform zero-shot text-to-speech by autoregressively predicting the mel-spectrogram. 
-> Given the text content $\bm{x}$ for synthesis, and a piece of speech prompt (with text transcription $\tilde{\bm{x}}$ and mel-spectrogram $\tilde{\bm{y}}$), at each time step \( t \), ***MELLE*** generates the next-frame mel-spectrogram \( \bm{y}_t' \) from a latent embedding \( \bm{z}_t \), which is sampled from a distribution conditioned on the concatenation of $\tilde{\bm{x}}$, $\bm{x}$, $\tilde{\bm{y}}$, and $\bm{y}_{<t}$.
-> After the AR generation process concludes, the coarse mel-spectrogram \( \bm{y}' \) passes through the post-net to obtain the refined spectrogram \( \bm{y}'' \), which is then converted to speech audio using an off-the-shelf vocoder.
+> Given the text content $\pmb{x}$ for synthesis, and a piece of speech prompt (with text transcription $\tilde{\pmb{x}}$ and mel-spectrogram $\tilde{\pmb{y}}$), at each time step \( t \), ***MELLE*** generates the next-frame mel-spectrogram \( \pmb{y}_t' \) from a latent embedding \( \pmb{z}_t \), which is sampled from a distribution conditioned on the concatenation of $\tilde{\pmb{x}}$, $\pmb{x}$, $\tilde{\pmb{y}}$, and $\pmb{y}_{<t}$.
+> After the AR generation process concludes, the coarse mel-spectrogram \( \pmb{y}' \) passes through the post-net to obtain the refined spectrogram \( \pmb{y}'' \), which is then converted to speech audio using an off-the-shelf vocoder.
 > If the reduction factor $r$ is set, the input and predicted mel-spectrograms will be grouped by that factor. 
 >
 > In contrast to neural codec language models (e.g., VALL-E) that rely on multi-stage iterative predictions across multi-layer codec codes and require the manual configuration of sampling parameters, ***MELLE*** accomplishes speech synthesis in a single forward pass and automatically samples from learned distributions that are unique to each input. 
