--- a/Models/Speech_LLM/2024.02.12_BASE-TTS.md
+++ b/Models/Speech_LLM/2024.02.12_BASE-TTS.md
@@ -71,16 +71,16 @@
 > In CV, pre-trained models that learn from hundreds of millions of image-caption pairs have achieved top performance on image-to-text benchmarks \cite{clip1,tejankar2021fistful,shen2022k}, while delivering remarkably photo-realistic results in text-to-image tasks \cite{rombach2022high, ramesh2022hierarchical, nichol2022glide, saharia2022photorealistic, yu2022scaling}.
 > This progress has been enabled by Transformer-based architectures \cite{originaltransformerpaper} that drive improvements using many orders of magnitude more data than previous models.
 > Similar advances are now occurring in Speech Processing and Text-to-Speech (TTS), with models leveraging thousands of hours of data that push synthesis ever closer towards human-like speech.
-> Some of these models, described in depth in Section \ref{sec:related_work}, rely on causal language modeling tasks, like [AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md) or [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md), whereas others use non-causal modules, such as [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) or [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md), or diffusion decoders \cite{NaturalSpeech2,tortoise}.
+> Some of these models, described in depth in Section \ref{sec:related_work}, rely on causal language modeling tasks, like [AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md) or [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md), whereas others use non-causal modules, such as [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) or [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md), or diffusion decoders ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md)).
 >
-> Until 2022, leading Neural TTS models were almost exclusively trained on a few hundreds of hours of recorded audio \cite{tacotron2, ecat,kim2021conditional,DBLP:conf/iclr/0006H0QZZL21,popov2021grad}.
+> Until 2022, leading Neural TTS models were almost exclusively trained on a few hundreds of hours of recorded audio ([Tacotron2 [22]](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); ecat, [VITS [24]](../../Models/E2E/2021.06.11_VITS.md); DBLP:conf/iclr/0006H0QZZL21; [Grad-TTS [26]](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
 > Such systems can create well-enunciated speech that is occasionally expressive for the target speakers, but typically cannot generalize beyond the small amount of training data to render ambiguous and complex texts with truly expressive spoken performance \cite{triantafyllopoulos2023overview,tahon2018can,schnell2022controllability}.
 > To achieve such higher levels of expressiveness, TTS systems historically had to rely on labeled datasets for specific speech phenomena; and even so, achieving human-like prosody for certain types of textual inputs has remained elusive \cite{tan2021survey}.
 > For example, in English, compound nouns and questions are notoriously hard to render correctly without accurate syntactic parsing and semantic understanding \cite{kenter2020improvingprosodywithbert}.
 > 
 > In this paper, we introduce BASE TTS: Big Adaptive Streamable TTS with Emergent abilities.
 > It is a multi-lingual and multi-speaker Large TTS (LTTS) system trained on around 100K (doubling previous high in [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md)) hours of public domain speech data.
-> BASE TTS follows the approach of casting TTS as a next-token-prediction problem [AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md),tortoise}, inspired by the success of LLMs.
+> BASE TTS follows the approach of casting TTS as a next-token-prediction problem ([AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md)), inspired by the success of LLMs.
 > This approach is usually applied in combination with large amount of training data to achieve strong multi-lingual and multi-speaker capabilities (e.g.
 > one-shot voice cloning).
 > Our goal is to improve general TTS quality and study how scaling affects the model's ability to produce appropriate prosody and expression for challenging text inputs, similar to how LLMs acquire new abilities through data and parameter scaling, a phenomenon known as "emergence" or "emergent abilities" in the LLM literature \cite{wei2022emergent, webb2023emergent}. \cite{wei2022emergent} defines \textit{emergent abilities of large language models} as "abilities that are not present in smaller-scale models but are present in large-scale models;" for example, they show that on a range of few-shot tasks, model capability stays at a low level from 10\textsuperscript{18} to 10\textsuperscript{22} training FLOPs, but makes a drastic jump from 10\textsuperscript{22} to 10\textsuperscript{24}.
@@ -88,7 +88,7 @@
 > See more details in Section \ref{sec:evaluation}.
 >
 > We design BASE TTS to model a joint distribution of text tokens followed by discrete speech representations, which we refer to as speechcodes.
-> Discretization of speech through audio codecs \cite{vqvae,zeghidour2021soundstream,DBLP:journals/corr/abs-2210-13438} is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS ([AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md); [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md), NaturalSpeech2,tortoise, kharitonov2023speak}.
+> Discretization of speech through audio codecs \cite{vqvae,zeghidour2021soundstream,DBLP:journals/corr/abs-2210-13438} is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS ([AudioLM [16]](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SoundStrom [18]](../../Models/Speech_LLM/2023.05.16_SoundStorm.md); [SpeechX [19]](../../Models/Speech_LLM/2023.08.14_SpeechX.md); [NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md); kharitonov2023speak).
 > Specifically, we model speechcodes using a decoder-only autoregressive Transformer with a cross-entropy training objective.
 > Despite its simplicity, this objective can capture complex probability distributions of expressive speech, thus alleviating the oversmoothing problem seen in early neural TTS systems \cite{ren2022revisiting}.
 > As an implicit language model, BASE TTS is also observed to make a qualitative jump in prosody rendering once a large enough variant is trained on sufficient data. 
@@ -116,7 +116,7 @@
 
 > Casting TTS problem as next token prediction has gained popularity in recent years due to how easy it is to scale language models to large data and model sizes.
 >
-> The first model using this approach was TortoiseTTS \cite{tortoise} released in 2022.
+> The first model using this approach was [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md) released in 2022.
 > It combines a GPT2-style speechcode language model with a diffusion decoder and an off-the-shelf vocoder, achieving remarkable few-shot capability.
 > [VALL-E [17]](../../Models/Speech_LLM/2023.01.05_VALL-E.md) followed a similar approach: the model is scaled to 60k hours of speech data and uses a pre-trained audio encoder EnCodec for speechcode extraction \cite{DBLP:journals/corr/abs-2210-13438}. 
 > [VALL-E X [61]](../../Models/Speech_LLM/2023.03.07_VALL-E_X.md) replicated VALL-E with 70k hours, with an additional cross-lingual speech-to-speech translation task in English and Chinese by using target language token as prompt.
@@ -140,10 +140,10 @@
 
 ### LTTS Simplifies Modeling
 
-> Since Tacotron~2 \cite{tacotron2}, a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and  SSML tag handling e.g.
+> Since [Tacotron2 [22]](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and  SSML tag handling e.g.
 > to mark emphasis \cite{DBLP:journals/corr/abs-2307-07062}, (2) a Mel-spectrogram generator, inferring the amplitudes of the speech signal and responsible for the model expressivity, and (3) a dedicated Vocoder \cite{DBLP:conf/ssw/OordDZSVGKSK16, jiao2021universal}, generating the waveform by inferring the phase information.
 > Expert knowledge can be induced to improve its performance such as using pre-computed features \cite{DBLP:conf/iclr/0006H0QZZL21}, coarse or fine-grained prosody information (\cite{Copycat}, and style control \cite{DBLP:conf/naacl/PrateekLBDLMRW19}.
-> It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows \cite{kim2021conditional}, and Diffusion \cite{popov2021grad}.
+> It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows （[VITS [24]](../../Models/E2E/2021.06.11_VITS.md)), and Diffusion ([Grad-TTS [26]](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
 >
 > These systems require a complex pipeline.
 > Any error made during an earlier stage is propagated to the next.
@@ -192,7 +192,7 @@
 
 > Discrete representation is foundational to the success of LLM, but identifying a compact and informative representation is less obvious in speech than in text, and less explored.
 > For BASE TTS, we first experiment with a  Vector Quantized Variational Autoencoder (VQ-VAE) baseline \cite{vqvae}, where an auto-encoder based architecture reconstructs mel-spectrograms through a discrete bottleneck, as described in Section \ref{sec:vqvae}.
-> VQ-VAE has been a successful paradigm in speech and image representation, and especially as a unit of modeling for TTS \cite{tjandra2020vqvae, tortoise}.
+> VQ-VAE has been a successful paradigm in speech and image representation, and especially as a unit of modeling for TTS \cite{tjandra2020vqvae, [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md)}.
 >
 > In Section \ref{sec:wavlm}, however, we introduce a novel method of learning speech representations through WavLM-based speechcodes.
 > In this method, we discretize features extracted from a WavLM SSL model to reconstruct a mel-spectrogram.
@@ -261,9 +261,9 @@ $$
 
 ### 3.4.Waveform Generation
 
-> Our baseline uses a diffusion-based spectrogram decoder and a separately trained UnivNet \cite{univnet} vocoder, as proposed in \cite{tortoise}.
+> Our baseline uses a diffusion-based spectrogram decoder and a separately trained UnivNet \cite{univnet} vocoder, as proposed in [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > Diffusion-based TTS decoding can generate high-quality speech, but it suffers from slow inference and cannot generate samples incrementally - This lack of streamabilility forces us to obtain the audio output for the entire sequence in one go.  
-> Furthermore, the diffusion model in \cite{tortoise} predicts spectrograms, and requires a separately trained vocoder to generate audio, complicating the training and inference pipeline. 
+> Furthermore, the diffusion model in [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md) predicts spectrograms, and requires a separately trained vocoder to generate audio, complicating the training and inference pipeline. 
 >
 > Our proposed decoder, inspired by \cite{ecat}, is trained in an end-to-end fashion to predict waveforms.
 > Our variant uses speechcodes as an input to the model instead of phoneme encodings and prosody latents.
@@ -274,7 +274,7 @@ $$
 > In addition to simplifying the overall system, we hypothesize that training the decoder and vocoder end-to-end yields higher-quality speech. 
 >
 > In practice, instead of speechcodes, the speechcode decoder takes as an input the last hidden state of the autoregressive Transformer. 
-> We do so because the dense latent representation provides much richer information than a single speechcode, following \cite{tortoise}.
+> We do so because the dense latent representation provides much richer information than a single speechcode, following [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > During training, we feed the text and target codes to the trained SpeechGPT (with parameters frozen) and then condition the decoder on the last hidden state.
 > Feeding the last hidden states of SpeechGPT helps improving the segmental and acoustic quality of speech, but also couples the decoder to a specific version of SpeechGPT.
 > This complicates experimentation because it forces the two components to  be always built sequentially. 
@@ -355,7 +355,7 @@ $$
 > These sentences are designed to contain challenging tasks - parsing garden-path sentences \cite{garden-path}, placing phrasal stress on long-winded compound nouns \cite{syntax-prosody}, producing emotional or whispered speech, or producing the correct phonemes for foreign words like "qi" or punctuations like "@" - none of which BASE TTS is explicitly trained to perform.
 > Our hypothesis is that as BASE TTS increases in model capacity and trains over more data, the model will start to acquire these abilities, following evidence that scaling in these dimensions begets qualitative ability jumps \cite{sparks, webb2023emergent, wei2022emergent}.
 > We share the full testset in Appendix \ref{appendix:emergent}.
-> - \textbf{Automated objective evaluations} to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis \cite{NaturalSpeech2}, and speaker similarity.  We use an ASR model to compute the Word Error Rate (WER) by comparing the testset text (ground truth) against the ASR output from the synthetic speech. 
+> - \textbf{Automated objective evaluations} to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)), and speaker similarity.  We use an ASR model to compute the Word Error Rate (WER) by comparing the testset text (ground truth) against the ASR output from the synthetic speech. 
 > In addition, we employ a [speaker verification model](https://huggingface.co/microsoft/wavlm-base-plus-sv) fine-tuned on WavLM features \cite{wavlm} to obtain speaker embeddings from the original recordings and synthetic speech, and then we compute the cosine distance between them to get a speaker similarity metric (SIM). 
 
 > For subjective evaluations, we report average MUSHRA scores with $95\%$ confidence intervals.
@@ -410,7 +410,7 @@ $$
 ### 5.4.BASE TTS vs.
 > industry baselines
 
-> We select three industry baselines with publicly available pre-trained models: YourTTS \cite{casanova2022yourtts}, Bark\footnote{\url{https://github.com/suno-ai/bark}}, and Tortoise \cite{tortoise}.
+> We select three industry baselines with publicly available pre-trained models: YourTTS \cite{casanova2022yourtts}, Bark\footnote{\url{https://github.com/suno-ai/bark}}, and [TortoiseTTS [21]](../../Models/_tmp/2023.05.12_TorToise-TTS.md).
 > We conduct the comparison exclusively in one-shot setting, using 10-second reference clip for two US English speakers which BASE TTS was not previously trained or evaluated on. 
 >
 > As seen in Table \ref{competitor-mushra}, BASE TTS obtains significantly higher naturalness scores in MUSHRA than baseline systems, among two US English speakers tested.
